[package]
name = "conditional_compilation"
version = "0.1.0"
authors = ["UQ Times <uqtimes@gmail.com>"]

[dependencies]

[features]
# no features by default
default = []

# # The "secure-password" feature depends on bcrypt.
# secure-password = ["bcrypt"]

# Add feature "foo" here, then you can use it. 
# Our "foo" feature depends on nothing else.
foo = []

